tests/ui/const-generics/backcompat/impossible_preds_repeat_expr_hack.stderr
error[E0277]: the trait bound `for<'a> (): Unimplemented<'a>` is not satisfied
  --> $DIR/impossible_preds_repeat_expr_hack.rs:34:43
   |
LL |     let _a: Foo<1> = Foo::<{ <u8 as Trait<()>>::ASSOC }>;
   |                                           ^^ the trait `for<'a> Unimplemented<'a>` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/impossible_preds_repeat_expr_hack.rs:5:1
   |
LL | pub trait Unimplemented<'a> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Trait::ASSOC`
  --> $DIR/impossible_preds_repeat_expr_hack.rs:9:16
   |
LL |     for<'a> T: Unimplemented<'a>,
   |                ^^^^^^^^^^^^^^^^^ required by this bound in `Trait::ASSOC`
LL | {
LL |     const ASSOC: usize;
   |           ----- required by a bound in this associated constant

error[E0277]: the trait bound `for<'a> (): Unimplemented<'a>` is not satisfied
  --> $DIR/impossible_preds_repeat_expr_hack.rs:34:31
   |
LL |     let _a: Foo<1> = Foo::<{ <u8 as Trait<()>>::ASSOC }>;
   |                               ^^ the trait `for<'a> Unimplemented<'a>` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/impossible_preds_repeat_expr_hack.rs:5:1
   |
LL | pub trait Unimplemented<'a> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required for `u8` to implement `Trait<()>`
  --> $DIR/impossible_preds_repeat_expr_hack.rs:14:9
   |
LL | impl<T> Trait<T> for u8
   |         ^^^^^^^^     ^^
LL | where
LL |     for<'a> T: Unimplemented<'a>,
   |                ----------------- unsatisfied trait bound introduced here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
